package roguelike.state

/**
 * Высокоуровневое описание действий пользователя
 */
interface Message