package roguelike.state.game.world.objects

/**
 * Любой объект, находящийся в игре
 */
abstract class GameObject {
    abstract val id: Int
}