package roguelike.state.game.world.objects

import roguelike.state.game.world.objects.GameObject

sealed class Item : GameObject