@startuml
'https://plantuml.com/class-diagram

abstract class Engine

abstract class UI {
    + pollEvent(): Event
    + render(view: View)
}

abstract class Controller {
    + bindState(state: State): View
    + processEvent(event: Event): Message
}

Engine *-- "controller" Controller
Engine *-- "ui" UI

class Simulator {
    + simulate(world: World, unitActions)
}

interface Strategy {
    + getAction(unit: GameUnit, worldView: WorldView): Action
}

class AggressiveStrategy
Strategy <|.. AggressiveStrategy

class AppleEatingStrategy
Strategy <|.. AppleEatingStrategy

class AvoidanceStrategy
Strategy <|.. AvoidanceStrategy

class ContusionStrategy
Strategy <|.. ContusionStrategy

class PassiveStrategy
Strategy <|.. PassiveStrategy

class StateStrategy
Strategy <|.. StateStrategy

class World {
    + map: Map
}

abstract class GameObject

abstract class GameUnit

interface Mob

GameUnit <|.. Mob
GameUnit <|.. PlayerUnit

Mob --o Strategy : "strategy"

class Pawn
Mob <|.. Pawn

class Knight
Mob <|.. Knight

class Knight

interface CloneableMob {
    + clone(id: Int, position: Position): Mob
}

class Mold

Mob <|.. Mold
CloneableMob <|.. Mold

abstract class StaticObject

abstract class Item

abstract class Inventory

Inventory o-- "[0.." Item : "items"

PlayerUnit *-- "inventory" Inventory

GameObject <|.. GameUnit
GameObject <|.. StaticObject
GameObject <|.. Item

interface Message

Controller ..> Message : "<<create>>"
State ..> Message


interface Event

Controller ..> Event
UI ..> Event : "<<create>>"




abstract class Controller

Controller ..> ViewBuilder

abstract class State {
    + process(message: Message): State
    + accept(visitor: StateVisitor)
}

class MenuScreenState

class SettingsScreenState

class GameState {
    playerUnit: GameUnit
}

class LoadingScreenState

interface StateVisitor {
    + visit(state: GameState)
    + visit(state: WelcomingScreenState)
    + visit(state: SettingsScreenState)
}


GameState *-- "world" World
GameState *-- "simulator" Simulator

interface ViewBuilder {
    + build(state: State): View
}


StateVisitor <|.. ViewBuilder

interface Renderer {
    + render(view: View)
}

interface ViewVisitor {
    + visit(view: TextView)
    + visit(view: ProgressBar)
    + ...()
}

interface View {
    + show()
    + accept(visitor: ViewVisitor)
}

class TextView

class ProgressBar

class RectangleBox

class AsciiGrid

class Button

class CompositeView

interface ViewBuilder

Engine *-- "currentState" State

State <|-- MenuScreenState
State <|-- SettingsScreenState
State <|-- GameState
State <|-- LoadingScreenState

View <|.. TextView
View <|.. ProgressBar
View <|.. RectangleBox
View <|.. AsciiGrid
View <|.. Button
View <|.. CompositeView


CompositeView *.. "[0.." View : "childs"

Renderer ..|> ViewVisitor
Renderer ..> View

UI *-- "renderer" Renderer

World *-- "[0.." GameObject : "objects"


@enduml